--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
  | Copyright 2011-2020 the original author or authors.
- | 
+ |
  | Licensed under the Apache License, Version 2.0 (the "License");
  | you may not use this file except in compliance with the License.
  | You may obtain a copy of the License at
@@ -113,7 +113,7 @@
 		<revision>1.1</revision>
 		<rxjava.version>1.3.8</rxjava.version>
 		<rxjava2.version>2.2.5</rxjava2.version>
-		<springdata-commons.version>2.4.0-SNAPSHOT</springdata-commons.version>
+		<springdata.commons>2.4.0-SNAPSHOT</springdata.commons>
 		<testcontainers.version>1.13.0</testcontainers.version>
 
 		<skipUnitTests>${skipTests}</skipUnitTests>
@@ -228,7 +228,7 @@
 			<dependency>
 				<groupId>org.springframework.data</groupId>
 				<artifactId>spring-data-commons</artifactId>
-				<version>${springdata-commons.version}</version>
+				<version>${springdata.commons}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.testcontainers</groupId>
