--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!--
  | Copyright 2011-2020 the original author or authors.
  |
@@ -13,14 +13,13 @@
  | WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  | See the License for the specific language governing permissions and
  | limitations under the License.
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+--><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.springframework.data.build</groupId>
 		<artifactId>spring-data-parent</artifactId>
-		<version>2.4.0-SNAPSHOT</version>
+		<version>2.4.0-M2</version>
 	</parent>
 
 	<groupId>org.springframework.data</groupId>
@@ -113,7 +112,7 @@
 		<revision>1.1</revision>
 		<rxjava.version>1.3.8</rxjava.version>
 		<rxjava2.version>2.2.5</rxjava2.version>
-		<springdata.commons>2.4.0-SNAPSHOT</springdata.commons>
+		<springdata.commons>2.4.0-M2</springdata.commons>
 		<testcontainers.version>1.13.0</testcontainers.version>
 
 		<skipUnitTests>${skipTests}</skipUnitTests>
@@ -586,7 +585,7 @@
 						</goals>
 						<configuration>
 							<rules>
-								<DependencyConvergence></DependencyConvergence>
+								<DependencyConvergence/>
 								<requireMavenVersion>
 									<version>3.6.0</version>
 								</requireMavenVersion>
@@ -684,9 +683,9 @@
 					<attributes>
 						<icons>font</icons>
 						<toc>left</toc>
-						<setanchors></setanchors>
-						<idprefix></idprefix>
-						<idseparator></idseparator>
+						<setanchors/>
+						<idprefix/>
+						<idseparator/>
 					</attributes>
 					<requires>
 						<require>asciidoctor-diagram</require>
@@ -748,8 +747,8 @@
 
 	<repositories>
 		<repository>
-			<id>spring-libs-snapshot</id>
-			<url>https://repo.spring.io/libs-snapshot</url>
+			<id>spring-libs-milestone</id>
+			<url>https://repo.spring.io/libs-milestone</url>
 		</repository>
 	</repositories>
 
