--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>org.springframework.data.build</groupId>
 		<artifactId>spring-data-parent</artifactId>
-		<version>2.4.0-M2</version>
+		<version>2.4.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.springframework.data</groupId>
@@ -112,7 +112,7 @@
 		<revision>1.1</revision>
 		<rxjava.version>1.3.8</rxjava.version>
 		<rxjava2.version>2.2.5</rxjava2.version>
-		<springdata.commons>2.4.0-M2</springdata.commons>
+		<springdata.commons>2.4.0-SNAPSHOT</springdata.commons>
 		<testcontainers.version>1.13.0</testcontainers.version>
 
 		<skipUnitTests>${skipTests}</skipUnitTests>
@@ -747,8 +747,8 @@
 
 	<repositories>
 		<repository>
-			<id>spring-libs-milestone</id>
-			<url>https://repo.spring.io/libs-milestone</url>
+			<id>spring-libs-snapshot</id>
+			<url>https://repo.spring.io/libs-snapshot</url>
 		</repository>
 	</repositories>
 
