--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>org.springframework.data.build</groupId>
 		<artifactId>spring-data-parent</artifactId>
-		<version>2.4.0-SNAPSHOT</version>
+		<version>2.4.0-RC1</version>
 	</parent>
 
 	<groupId>org.springframework.data</groupId>
@@ -122,7 +122,7 @@
 		<skipIntegrationTests>${skipTests}</skipIntegrationTests>
 
 		<skipUnitTests>${skipTests}</skipUnitTests>
-		<springdata.commons>2.4.0-SNAPSHOT</springdata.commons>
+		<springdata.commons>2.4.0-RC1</springdata.commons>
 		<testcontainers.version>1.13.0</testcontainers.version>
 	</properties>
 
@@ -426,8 +426,8 @@
 
 	<repositories>
 		<repository>
-			<id>spring-libs-snapshot</id>
-			<url>https://repo.spring.io/libs-snapshot</url>
+			<id>spring-libs-milestone</id>
+			<url>https://repo.spring.io/libs-milestone</url>
 		</repository>
 	</repositories>
 
@@ -606,7 +606,7 @@
 						</goals>
 						<configuration>
 							<rules>
-								<DependencyConvergence />
+								<DependencyConvergence/>
 								<requireMavenVersion>
 									<version>3.6.0</version>
 								</requireMavenVersion>
@@ -713,9 +713,9 @@
 					<attributes>
 						<icons>font</icons>
 						<toc>left</toc>
-						<setanchors />
-						<idprefix />
-						<idseparator />
+						<setanchors/>
+						<idprefix/>
+						<idseparator/>
 					</attributes>
 					<requires>
 						<require>asciidoctor-diagram</require>
