--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>org.springframework.data.build</groupId>
 		<artifactId>spring-data-parent</artifactId>
-		<version>2.4.0-RC1</version>
+		<version>2.4.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.springframework.data</groupId>
@@ -122,7 +122,7 @@
 		<skipIntegrationTests>${skipTests}</skipIntegrationTests>
 
 		<skipUnitTests>${skipTests}</skipUnitTests>
-		<springdata.commons>2.4.0-RC1</springdata.commons>
+		<springdata.commons>2.4.0-SNAPSHOT</springdata.commons>
 		<testcontainers.version>1.13.0</testcontainers.version>
 	</properties>
 
@@ -426,8 +426,8 @@
 
 	<repositories>
 		<repository>
-			<id>spring-libs-milestone</id>
-			<url>https://repo.spring.io/libs-milestone</url>
+			<id>spring-libs-snapshot</id>
+			<url>https://repo.spring.io/libs-snapshot</url>
 		</repository>
 	</repositories>
 
