--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
 	<groupId>org.springframework.data</groupId>
 	<artifactId>spring-data-neo4j</artifactId>
-	<version>6.1.0-SNAPSHOT</version>
+	<version>6.1.0-DATAGRAPH-1428-SNAPSHOT</version>
 
 	<name>Spring Data Neo4j</name>
 	<description>Next generation Object-Graph-Mapping for Spring Data.</description>
@@ -116,7 +116,7 @@
 		<skipIntegrationTests>${skipTests}</skipIntegrationTests>
 
 		<skipUnitTests>${skipTests}</skipUnitTests>
-		<springdata.commons>2.5.0-SNAPSHOT</springdata.commons>
+		<springdata.commons>2.4.0-DATACMNS-800-SNAPSHOT</springdata.commons>
 
 		<spring-data-commons-docs.dir>../../../../spring-data-commons/src/main/asciidoc</spring-data-commons-docs.dir>
 	</properties>
